--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Meddon&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Winky+Rough:ital,wght@0,300..900;1,300..900&display=swap');
 
 html {
     font-size: 16px;
